# Rosbot

./: .gitignore  README.md  frames.gv  helping_commands.txt  plan.txt  setup.sh  test_maze.rviz  yaw.csv
debug_r_l/: Ausschnitt_debug_differential.txt  debug_odom_imu_diff_off.txt
devel/: .catkin
devel/lib/estimate_position/: estimate_position_node
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/localization/: evaluation_node  imu_bias_node  localization_node  measure_acc_node  measure_yaw_node  test_ekf
devel/lib/measurement_error/: measurement_error_node
devel/lib/pkgconfig/: estimate_position.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  localization.pc  measurement_error.pc  process_error.pc  rosbot_description.pc  rosbot_ekf.pc  rosbot_gazebo.pc  rosbot_navigation.pc
devel/lib/process_error/: process_error_node
devel/lib/rosbot_ekf/: cmd_vel_ws2812b_example  move_base_ws2812b_example  msgs_conversion
devel/share/estimate_position/cmake/: estimate_positionConfig.cmake
devel/share/hector_compressed_map_transport/cmake/: hector_compressed_map_transportConfig.cmake
devel/share/hector_geotiff/cmake/: hector_geotiffConfig.cmake
devel/share/hector_geotiff_launch/cmake/: hector_geotiff_launchConfig.cmake
devel/share/hector_geotiff_plugins/cmake/: hector_geotiff_pluginsConfig.cmake
devel/share/hector_imu_attitude_to_tf/cmake/: hector_imu_attitude_to_tfConfig.cmake
devel/share/hector_imu_tools/cmake/: hector_imu_toolsConfig.cmake
devel/share/hector_map_server/cmake/: hector_map_serverConfig.cmake
devel/share/hector_map_tools/cmake/: hector_map_toolsConfig.cmake
devel/share/hector_mapping/cmake/: hector_mapping-msg-extras.cmake  hector_mapping-msg-paths.cmake  (+1 more)
src/: READ.ME  helping_commands.txt
src/Beleg/: Messungen.db  acc.csv  acc_backup.csv  evaluation.csv  yaw.csv
src/Beleg/localization/: CMakeLists.txt  CMakeLists1.txt  evaluation.csv  frames.gv  package.xml  test  tmp_res.txt
src/Beleg/localization/data_eval/: Beschreibung_db.txt  Messungen.db  Messungen.db.sqbpro  Messungen.sqbpro  eval_sql.cpp  final_eval.py  plot_acc.py  plot_yaw.py  yaw.csv  yaw_backup.csv
src/Beleg/localization/data_eval/sql_queries/: AVG_offset  acc_avg  alter_floor  avg_mean_by_speed  eval_dist  variance  vgl_flur_5cm_10cm
src/Beleg/localization/data_eval/sqlitebrowser_Bilder/: AMCL-AbweichungFlur_gedreht.eps  AMCL-AbweichungFlur_gedreht.odg  AMCL-AbweichungvonE53.eps  AMCL-AbweichungvonE53_2.eps  AMCL-AbweichungvonE53_2.odg  AMCL-AbweichungvonE53_2asfsdff.eps  AMCL-AbweichungvonFE53_2asdf.eps  AMCL-AbweichungvonFE53_3.eps  AMCL-AbweichungvonFlur.eps  AMCL-AbweichungvonFlur_2.eps  AMCL-AbweichungvonFlur_2.odg  AMCL-AbweichungvonFlur_4.eps  XY-Abweichungen0_2.eps  XY-Abweichungen0_4.eps  XY-Abweichungen0_6.eps  XY-Abweichungen0_8.eps  Yaw0.25.eps  Yaw0.5.eps  Yaw0.75.eps  Yaw1.0.eps  Yaw_sep0.25:1.5708.eps  Yaw_sep0.25:3.14159.eps  Yaw_sep0.5:1.5708.eps  Yaw_sep0.5:3.14159.eps  Yaw_sep0.75:1.5708.eps  Yaw_sep0.75:3.14159.eps  Yaw_sep1.0:1.5708.eps  Yaw_sep1.0:3.14159.eps  amcl_meas_distE53_10cm.eps  amcl_meas_distE53_5cm.eps  amcl_meas_distE53_5cm_beam_max.eps  amcl_meas_dist_e53_5cm.eps  amcl_meas_dist_kde_E53_10cm.eps  amcl_meas_dist_kde_E53_5cm.eps  amcl_meas_dist_kde_E53_5cm_beam_max.eps  amcl_meas_dist_kde_floor_10cm.eps  amcl_meas_dist_kde_floor_5cm.eps  amcl_meas_dist_nodes_.eps  amcl_meas_dist_nodes_E53.eps  amcl_meas_dist_nodes_flur_.eps  (+10 more)
src/Beleg/localization/launch/: .start_lidar.launch.swp  all.launch  gazebo_evaluation.launch  hector_slam.launch  laser_test_rosbot.launch  mapping_new.launch  r_l.launch  rviz_config_hector.rviz  start_lidar.launch  test_ekf.launch  tutorial_new.launch
src/Beleg/localization/launch/amcl/: amcl.launch  slam_gmapping.launch
src/Beleg/localization/launch/hector_mapping/: frames.gv  hector_mapping.launch  hector_slam_gazebo.launch  mapping_new.launch
src/Beleg/localization/launch/laser_scan_matcher/: gazebo.launch  laser_test_rosbot.launch
src/Beleg/localization/parameter/: E53_10_08_22.yaml  E53_12_08_22.yaml  E53_19_08_22.yaml  E53_21_07_22.pgm  E53_21_07_22.yaml  E53_22_07_22.pgm  E53_22_07_22.yaml  E53_24_08_22_10cm.pgm  E53_24_08_22_10cm.yaml  E53_29_08_22_5cm_update_ad.yaml  ekf_params_amcl.yaml  ekf_params_hector.yaml  ekf_params_imu+odom.yaml  ekf_params_laser_scan.yaml  floor_25_08_22_5cm.yaml  floor_26_08_22_10cm.pgm  floor_26_08_22_10cm.yaml  gazebo_map.pgm  gazebo_map.yaml
src/Beleg/localization/src/: drive_to_points.cpp  drive_to_points.h  driver.cpp  driver.h  ekf_eval.cpp  helpers.cpp  helpers.h  imu_bias.cpp  localization.cpp  localization.h  measure_acc.cpp  measure_acc.h  measure_yaw.cpp  measure_yaw.h  monitor  monitor_process.cpp  monitor_process.h  move_base.cpp  move_on_path.cpp  repub_odom_imu.cpp  repub_odom_imu.h  sqlite_lib.cpp  sqlite_lib.h  turn_move.cpp  update_hector_variance.cpp
src/Gruppe1/: E53_24_03.pgm  E53_24_03.yaml  E53_28_03.pgm  E53_28_03.yaml  my_map.pgm  my_map.yaml  new_map_E53.pgm  new_map_E53.yaml
src/measurement_error/: CMakeLists.txt  package.xml
src/measurement_error/launch/: print_ranges.launch
src/measurement_error/src/: measurement_error.cpp  measurement_error.h
src/process_error/: CMakeLists.txt  helping_commands.txt  my_map.yaml  package.xml
src/process_error/config/: global_costmap_params.yaml  local_costmap_params.yaml
src/process_error/launch/: mapping.launch  process_error.launch
src/process_error/src/: helpers.cpp  helpers.h  process_error_node.cpp
src/rosbot_ekf/launch/: all.launch  rosbot_ekf.launch  rosserial_bridge.launch
src/rosbot_ekf/params/: ekf_params.yaml
(+48 files in other folders)
